fix(datagrid): use correct z-index for sticky row elements

--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -571,7 +571,7 @@
     flex-wrap: nowrap;
     position: sticky;
     left: 0;
-    z-index: map-get($clr-layers, datagrid-header-sticky);
+    z-index: map-get($clr-layers, datagrid-row-sticky);
 
     .datagrid-cell:last-child {
       &:after {
